--- a/src/entities/task/ui/TaskList/TaskList.module.scss
+++ b/src/entities/task/ui/TaskList/TaskList.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   min-height: 300px;
   font-weight: lighter;
 }
